<resources>
    <string name="app_name">Weather</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_town">Add Town</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="defaultLanguage">en</string>
    <!-- Kiev -->
    <string name="defaultTownCode">3478</string>

    <!-- Menu items -->
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>

    <!-- Settings -->
    <string name="town_code_summary">Edit, if you know your RP5 town code.</string>
    <string name="town_code_title">Town code</string>
    <string name="find_code">Find your town code</string>
    <string name="lang_summary">Language for weather data.</string>
    <string name="lang_title">Language</string>
    <string name="net_summary">Network connectivity required to download the weather feed.</string>
    <string name="net_title">Network Type</string>

    <!-- NetworkActivity -->
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="air_temperature">Air temperature: </string>
    <string name="atmospheric_pressure">Atmospheric pressure: </string>
    <string name="humidity">Humidity: </string>
    <string name="wind_direction">Wind direction: </string>
    <string name="wind_force">Wind force: </string>
    <string name="rain">Rain: </string>
    <string name="snow">Snow: </string>
    <string name="date">Date: </string>
    <string name="vind_units"> m/sec</string>
    <string name="temp_units">&#176;</string>
    <string name="press_units">mm</string>
    <string name="hum_units">%</string>
    <string name="weather">Weather</string>
    <string name="rp5_cr">Powered by www.rp5.ua</string>
    <string name="title_activity_search_town">City search</string>
    <string name="search">Search</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="widget_name">Rp5 виджет(small)</string>
    <string name="widget_name_big">Rp5 виджет(big)</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="tomorrow_temp_day">24</string>
    <string name="tomorrow_temp_nght">10</string>
    <string name="today_temp_day">23</string>
    <string name="today_temp_night">11</string>
    <string name="list">List</string>
    <string name="pager">Pager</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="title_activity_new_settings">NewSettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="widget_town_title">Town</string>
    <string name="widget_town_summary">Town for widget</string>
    <string name="local_time">Local Time: </string>
    <string name="more">More</string>
    <string name="enjoy">"If you enjoy using "</string>
    <string name="thanks">", please take a moment to rate it. Thanks for your support!"</string>
    <string name="rate">"Rate "</string>
    <string name="later">"Remind me later"</string>
    <string name="no_thanks">"No, thanks"</string>
    <string name="site_url">"http://rp5.ua/"</string>
    <string name="wap_site_url">"http://wap.rp5.ua/"</string>
    <string name="mobile_site_url">"http://m.rp5.ua/"</string>
    <string name="insert_the_city_name">Insert the city name</string>
    <string name="results">Results</string>
    <string name="unit_system">Unit system</string>
    <string name="language">Language</string>
    <string name="town_for_widgets">Town for widgets</string>

</resources>
