<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="3"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="1"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/remove"
        android:icon="@drawable/ic_action_remove"
        android:orderInCategory="2"
        android:title="@string/remove"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="4"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>

</menu>